--- a/app/js/templates/review-panels.html
+++ b/app/js/templates/review-panels.html
@@ -1,30 +1,30 @@
 <section ng-controller="PanelController as panel">
 	<ul class="nav nav-pills">
-		<li ng-class="{active:panel.isSelected(1)}">
-			<a href ng-click="panel.selectTab(1)">Description</a>
+		<li ng-class="{active:isSelected(1)}">
+			<a href ng-click="selectTab(1)">Description</a>
 		</li>
-		<li ng-class="{active:panel.isSelected(2)}">
-			<a href ng-click="panel.selectTab(2)">Specification</a>
+		<li ng-class="{active:isSelected(2)}">
+			<a href ng-click="selectTab(2)">Specification</a>
 		</li>
-		<li ng-class="{active:panel.isSelected(3)}">
-			<a href ng-click="panel.selectTab(3)">Reviews</a>
+		<li ng-class="{active:isSelected(3)}">
+			<a href ng-click="selectTab(3)">Reviews</a>
 		</li>
 	</ul>
-	<div class="panel" ng-show="panel.isSelected(1)">
+	<div class="panel" ng-show="isSelected(1)">
 		<h4>Description</h4>
 		<p>{{product.description}}</p>
 	</div>
-	<div class="panel" ng-show="panel.isSelected(2)">
+	<div class="panel" ng-show="isSelected(2)">
 		<h4>Specfication</h4>
 		<p>{{product.specification}}</p>
 	</div>
-	<div class="panel reviews" ng-show="panel.isSelected(3)">
+	<div class="panel reviews" ng-show="isSelected(3)">
 		<h4>Reviews</h4>
 		<ul ng-repeat="review in product.reviews">
 			<li>
-				<h5>Score: {{review.score}}/5</h5>
-				<p>{{review.body}}</p>
-				<em>By: {{review.author}}</em>
+				<h5>Calories: {{review.calories}}/5</h5>
+				<p>{{review.comment}}</p>
+				<em>By: {{review.source}}</em>
 			</li>
 		</ul>
 	</div>
